--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -38,21 +38,19 @@ always_allow_html: yes
 
 Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου. Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης [@fernandez-lopez_castanea_2003]. 
 
-Η μεγάλη εξάρτηση κοινωνιών έχει οδηγήσει...
-Εξαιτίας της εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού..., γενετικό υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φυσικών πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους (αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω προσβολών κυρίως από τους μύκητες _Cryphonectria parasitica_ και _Phytophthora cambivora_.
-+ κατακερματισμός απομόνωση γενετικού υλικού
-
-## Θεωρητικό πλαίσιο
+<!-- ## Θεωρητικό πλαίσιο -->
 <!-- Εξηγώ όλους τους παράγοντες που έγραψα στην εισαγωγή -->
   
-Η εκτεταμένη καλλιεργεια από τον εχει αφησει το στιγμα της   
+Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα από τον έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους.   
   
-Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία ικαι διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων.  Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθεδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
+<!-- Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία ικαι διαχείριση των γενετικών πόρων ενός είδους.  -->
 
+Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων.  Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθεδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
 Ένα άλλο πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγώγης ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδιών. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μείωνοντας έτσι την προσαρμοστικότητά τους. [@Lefevre2004; @olden_ecological_2004]
 
 Η ικανότητα των δασών καστανιάς να αναπαράγονται βλαστικά έχει επιτρέψει στον άνθρωπο να διαχειρίζεται αυτά τα οικοσυστήματα με μικρούς περίτροπους χρόνους.
-Ωστόσο τα πρεμνοφυή δάση αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με αντίστοιχα φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008]. Το συγκριτικά χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το οποίο προκύπτει η εξελικτική προσαρμογή του δάσους είναι μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [47].
+Ωστόσο στα πρεμνοφυή δάση παρεμποδίζεται η φυσική αναγέννηση άρα και η δράση της φυσικής επιλογής σε αυτό το εξελικτικό στάδιο. Επιπλέον τα πρεμνοφυή δάση αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με αντίστοιχα φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008]. 
+Τα παραπάνω στοιχεία συνηγορούν στο γεγονός ότι τα δάση αυτά έχουν εν δυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό ρυθμό προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [@aravanopoulos_does_2003]. 
 
 Μελετεττς με ισον
 
@@ -167,6 +165,9 @@ kable(mtcars[1:10, 1:6], caption = "Group Rows") %>%
 <!-- STRUCTURE  -->
 <!-- DAPC -->
 
+<!-- Η μεγάλη εξάρτηση κοινωνιών έχει οδηγήσει... -->
+<!-- Εξαιτίας της εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού..., γενετικό υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φυσικών πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους (αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω προσβολών κυρίως από τους μύκητες _Cryphonectria parasitica_ και _Phytophthora cambivora_. -->
+<!-- + κατακερματισμός απομόνωση γενετικού υλικού -->
 
 ## Βιβλιογραφία
 <!-- &nbsp;  -->
