--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -8,13 +8,13 @@ papersize: a4
 date: "Οκτώβριος 2018"
 documentclass: report
 output:
-  bookdown::word_document2:
-    toc: yes
   bookdown::pdf_document2:
     keep_tex: yes
     latex_engine: xelatex
     toc: no
     number_sections: no
+  bookdown::word_document2:
+    toc: yes
 header-includes: 
   \usepackage[greek]{babel}
   # \usepackage{extsizes}
@@ -41,22 +41,22 @@ always_allow_html: yes
 <!-- ## Θεωρητικό πλαίσιο -->
 <!-- Εξηγώ όλους τους παράγοντες που έγραψα στην εισαγωγή -->
   
-Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα από τον έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους.   
+Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα, έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους.   
   
 <!-- Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία ικαι διαχείριση των γενετικών πόρων ενός είδους.  -->
 
-Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων.  Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθεδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
+Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως ιδρύονται με εμβόλια επιλεγμένων κλώνων. Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθεδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
 Ένα άλλο πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγώγης ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδιών. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μείωνοντας έτσι την προσαρμοστικότητά τους. [@Lefevre2004; @olden_ecological_2004]
 
 Η ικανότητα των δασών καστανιάς να αναπαράγονται βλαστικά έχει επιτρέψει στον άνθρωπο να διαχειρίζεται αυτά τα οικοσυστήματα με μικρούς περίτροπους χρόνους.
 Ωστόσο στα πρεμνοφυή δάση παρεμποδίζεται η φυσική αναγέννηση άρα και η δράση της φυσικής επιλογής σε αυτό το εξελικτικό στάδιο. Επιπλέον τα πρεμνοφυή δάση αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με αντίστοιχα φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008]. 
-Τα παραπάνω στοιχεία συνηγορούν στο γεγονός ότι τα δάση αυτά έχουν εν δυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό ρυθμό προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [@aravanopoulos_does_2003]. 
+Τα παραπάνω στοιχεία συνηγορούν στο γεγονός ότι τα δάση αυτά έχουν εν δυνάμει μικρότερο δυναμικό προσαρμογής ή/και παρουσιάζουν χρονική υστέρηση πιο αργό ρυθμό προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [@aravanopoulos_does_2003]. 
 
-Μελετεττς με ισον
+Μελέτες που έχουν πραγματοποιηθεί με αλληλοένζυμα [@Villani1991; @villani1991genetic; @villani1994evolution] έδειξαν χαμηλότερες τιμές ποικιλότητας σε ευρωπαϊκούς πληθυσμούς σε Ιταλία και Γαλλία σε σχέση με πληθυσμούς προερχόμενους από την Τουρκία. Οι ελληνικοί πληθυσμοί του είδους έχουν διερευνηθεί σε μελέτες [@aravanopoulos_genetic_2010; @aravanopoulos_molecular_2005; @aravanopoulos_multilocus_2005; @Aravanopoulos2001] κυρίως με τη χρήση αλληλοενζύμων. Τα τελευταία χρόνια εμφανίζεται πληθώρα εργασιών στη διεθνή βιβλιογραφία με αναλύσεις σύγχρονων μοριακών δεικτών όπως οι μικροδορυφόροι (SSR)  [@buck_isolation_2003; @marinoni_development_2003; @martin_genetic_2010; @Mattioni2008; @Mattioni2013]. 
 
 <!-- refugia - founder effects [@Petit2005] Long term --> Η κατακερματισμένη εξάπλωση του είδους στη Μεσόγειο καθιστά απαραίτητη την μελέτη και προστασία των γενετικών αποθεμάτων απομονωμένων πληθυσμών, ώστε να μετριαστεί η αρνητική επίδραση της γενετικης εκτροπής
 
-Σημερα κρινεται αναγκαια η μελετη των ελλ πληθ
+Σήμερα κρίνεται αναγκαία η μελετη των ελληνικών πληθυσμών του είδους με σύγχρονες μοριακές τεχνικές. Υψηλή προτεραιότητα θα πρέπει να έχουν μεταξύ άλλων και γεωγραφικά απομονωμένοι πληθυσμοί καθώς ο κίνδυνος απώλειας πολύτιμου γενετικού υλικού από αυτούς, λόγω γενετικής εκτροπής ή γενετικής ρύπανσης είναι υψηλός.
 
 
 Προτείνεται η μελέτη δύο πληθυσμών καστανιάς της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει καστανεώνα (περιοχή Αγιάσου) ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
