--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -40,26 +40,19 @@ always_allow_html: yes
 
 <!-- ## Θεωρητικό πλαίσιο -->
 <!-- Εξηγώ όλους τους παράγοντες που έγραψα στην εισαγωγή -->
-  
-Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα, έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους.   
-  
 <!-- Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία ικαι διαχείριση των γενετικών πόρων ενός είδους.  -->
 
-Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως ιδρύονται με εμβόλια επιλεγμένων κλώνων. Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθεδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
-Ένα άλλο πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγώγης ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδιών. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μείωνοντας έτσι την προσαρμοστικότητά τους. [@Lefevre2004; @olden_ecological_2004]
-
-Η ικανότητα των δασών καστανιάς να αναπαράγονται βλαστικά έχει επιτρέψει στον άνθρωπο να διαχειρίζεται αυτά τα οικοσυστήματα με μικρούς περίτροπους χρόνους.
+Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα, έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως ιδρύονται με εμβόλια επιλεγμένων κλώνων. Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθεδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
+Ένα άλλο πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγώγης ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδιών. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μείωνοντας έτσι την προσαρμοστικότητά τους [@Lefevre2004; @olden_ecological_2004]. Η ικανότητα των δασών καστανιάς να αναπαράγονται βλαστικά έχει επιτρέψει στον άνθρωπο να διαχειρίζεται αυτά τα οικοσυστήματα με μικρούς περίτροπους χρόνους.
 Ωστόσο στα πρεμνοφυή δάση παρεμποδίζεται η φυσική αναγέννηση άρα και η δράση της φυσικής επιλογής σε αυτό το εξελικτικό στάδιο. Επιπλέον τα πρεμνοφυή δάση αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με αντίστοιχα φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008]. 
-Τα παραπάνω στοιχεία συνηγορούν στο γεγονός ότι τα δάση αυτά έχουν εν δυνάμει μικρότερο δυναμικό προσαρμογής ή/και παρουσιάζουν χρονική υστέρηση πιο αργό ρυθμό προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [@aravanopoulos_does_2003]. 
+Τα παραπάνω στοιχεία συνηγορούν στο γεγονός ότι τα δάση αυτά έχουν εν δυνάμει μικρότερο δυναμικό προσαρμογής ή/και παρουσιάζουν χρονική υστέρηση στην προσαρμογή σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [@aravanopoulos_does_2003]. 
 
 Μελέτες που έχουν πραγματοποιηθεί με αλληλοένζυμα [@Villani1991; @villani1991genetic; @villani1994evolution] έδειξαν χαμηλότερες τιμές ποικιλότητας σε ευρωπαϊκούς πληθυσμούς σε Ιταλία και Γαλλία σε σχέση με πληθυσμούς προερχόμενους από την Τουρκία. Οι ελληνικοί πληθυσμοί του είδους έχουν διερευνηθεί σε μελέτες [@aravanopoulos_genetic_2010; @aravanopoulos_molecular_2005; @aravanopoulos_multilocus_2005; @Aravanopoulos2001] κυρίως με τη χρήση αλληλοενζύμων. Τα τελευταία χρόνια εμφανίζεται πληθώρα εργασιών στη διεθνή βιβλιογραφία με αναλύσεις σύγχρονων μοριακών δεικτών όπως οι μικροδορυφόροι (SSR)  [@buck_isolation_2003; @marinoni_development_2003; @martin_genetic_2010; @Mattioni2008; @Mattioni2013]. 
 
-<!-- refugia - founder effects [@Petit2005] Long term --> Η κατακερματισμένη εξάπλωση του είδους στη Μεσόγειο καθιστά απαραίτητη την μελέτη και προστασία των γενετικών αποθεμάτων απομονωμένων πληθυσμών, ώστε να μετριαστεί η αρνητική επίδραση της γενετικης εκτροπής
+<!-- refugia - founder effects [@Petit2005] Long term --> 
+<!-- Η κατακερματισμένη εξάπλωση του είδους στη Μεσόγειο καθιστά απαραίτητη την μελέτη και προστασία των γενετικών αποθεμάτων απομονωμένων πληθυσμών, ώστε να μετριαστεί η αρνητική επίδραση της γενετικης εκτροπής -->
 
-Σήμερα κρίνεται αναγκαία η μελετη των ελληνικών πληθυσμών του είδους με σύγχρονες μοριακές τεχνικές. Υψηλή προτεραιότητα θα πρέπει να έχουν μεταξύ άλλων και γεωγραφικά απομονωμένοι πληθυσμοί καθώς ο κίνδυνος απώλειας πολύτιμου γενετικού υλικού από αυτούς, λόγω γενετικής εκτροπής ή γενετικής ρύπανσης είναι υψηλός.
-
-
-Προτείνεται η μελέτη δύο πληθυσμών καστανιάς της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει καστανεώνα (περιοχή Αγιάσου) ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
+Σήμερα κρίνεται αναγκαία η μελετη των ελληνικών πληθυσμών του είδους με σύγχρονες μοριακές τεχνικές. Υψηλή προτεραιότητα θα πρέπει να έχουν μεταξύ άλλων και γεωγραφικά απομονωμένοι πληθυσμοί καθώς ο κίνδυνος απώλειας πολύτιμου γενετικού υλικού από αυτούς, λόγω φαινομένων όπως η γενετική εκτροπή ή η γενετική ρύπανση είναι υψηλός. Προτείνεται η μελέτη δύο πληθυσμών καστανιάς στην περιοχή Αγιάσου της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει καστανεώνα ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
 
 ## Σκοπός
 
@@ -76,26 +69,26 @@ always_allow_html: yes
 #### _Συλλογή φυτικού υλικού & Εκχύλιση DNA_
 Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB [@doyle1987genomic].
 
-### Αλυσιδωτή αντίδραση πολυμεράσης
-Για τη γενετική ανάλυση θα χρησιμοποιηθούν μοριακοί δείκτες SSR (Simple Sequence Repeats). Οι SSR ή μικροδορυφορικοί δείκτες αποτελούνται από αλληλουχίες 2-5 νουκλεοτιδίων που επαναλαμβάνονται 5-100 φορές [@budak_comparative_2004]. Ο συγκυρίαρχος χαρακτήρας τους σε συνδυασμό με τα υψηλά επίπεδα πολυμορφισμού που παρουσιάζουν, τους καθιστούν εξαιρετικούς δείκτες για τη μελέτη πρόσφατων μικροεξελικτικών διεργασιών [@Wang2010a]. Οι μικροδορυφόροι μπορούν να διακριθούν σε ουδέτερους και λειτουργικούς. Στην πρώτη κατηγορία ανήκουν εκείνες οι γονιδιακές θέσεις οι οποίες βρίσκονται σε τυχαία τμήματα του γονιδιώματος. Αντίθετα οι λειτουργικοί δείκτες ενισχύουν γονιδιακές θέσεις που εκφράζονται και επομένως σχετίζονται με κάποια βιολογική διεργασία [citation???].
+#### _Αλυσιδωτή αντίδραση πολυμεράσης_
+Για τη γενετική ανάλυση θα χρησιμοποιηθούν μοριακοί δείκτες SSR (Simple Sequence Repeats). Οι SSR ή μικροδορυφορικοί δείκτες αποτελούνται από αλληλουχίες 2-5 νουκλεοτιδίων που επαναλαμβάνονται 5-100 φορές [@budak_comparative_2004]. Ο συγκυρίαρχος χαρακτήρας τους σε συνδυασμό με τα υψηλά επίπεδα πολυμορφισμού που παρουσιάζουν, τους καθιστούν εξαιρετικούς δείκτες για τη μελέτη πρόσφατων μικροεξελικτικών διεργασιών [@Wang2010a]. Οι μικροδορυφόροι μπορούν να διακριθούν σε ουδέτερους και λειτουργικούς. Στην πρώτη κατηγορία ανήκουν εκείνες οι γονιδιακές θέσεις οι οποίες βρίσκονται σε τυχαία τμήματα του γονιδιώματος. Αντίθετα οι λειτουργικοί δείκτες ενισχύουν γονιδιακές θέσεις που εκφράζονται και επομένως σχετίζονται με κάποια βιολογική διεργασία [@durand_fast_2010].
 
 Συγκεκριμένα θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR (EMCs38, CsCAT3, CsCAT6) [@buck_isolation_2003; @marinoni_development_2003] και πέντε δείκτες EST-SSR (GOT004, GOT021, FIR110, POR042 και WAG004) [@durand_fast_2010]. Οι EST-SSR που έχουν επιλεγεί σχετίζονται με την αντοχή των δέντρων σε συνθήκες υδατικής έλλειψης.
 <!-- Μήπως θα με ρωτήσουν αν κάνω καλά που επιλέγω est για μελέτη gene flow; -->
 
-### Γενετική ποικιλότητα εντός πληθυσμών
+#### _Γενετική ποικιλότητα εντός πληθυσμών_
 Η στατιστική ανάλυση θα πραγματοποιηθεί σε περιβάλλον της στατιστικής γλώσσας R [@RCoreTeam2018] με χρήση των πακέτων poppr [@Kamvar2014], hierfstat [@goudet_hierfstat_2005], και genepop [@Rousset2008]. Οι βασικές παράμετροι γενετικής ποικιλότητας (αριθμός αλληλομόρφων, ετεροζυγωτία, συντελεστής ομομειξίας, ισορροπία Hardy-Weinberg κ.α.) θα εκτιμηθούν αφού πρώτα διερευνηθεί η ανισορροπία σύνδεσης μεταξύ των γονιδιακών θέσεων και η πιθανότητα ύπαρξης μηδενικών αλληλομόρφων. 
 
 Τα δραστικά μεγέθη των πληθυσμών θα εκτιμηθούν με το πρόγραμμα N~e~ Estimator [@Do2014], ενώ η ύπαρξη γενετικών στενωπών στην εξελικτική ιστορία των πληθυσμών θα διερευνηθεί με τα προγράμματα BOTTLENECK [@Piry1999] (πρόσφατο παρελθόν: 2 N~e~ - 4 N~e~ γενεές) και Arlequin [@excoffier_arlequin_2010] (M-ratio test, υποδεικνύει παλαιότερες δημογραφικές μεταβολές).
 
 Επίσης θα υπολογιστεί ο αριθμός των γενοτύπων (multilocus genotypes) που απαντώνται στον υπό μελέτη καστανεώνα. 
 
-### Γενετική ποικιλότητα μεταξύ πληθυσμών
+#### _Γενετική ποικιλότητα μεταξύ πληθυσμών_
 
 Θα υπολογιστεί ο συντελεστής διαφοροποίησης F~ST~ [@nei1987molecular], η γενετική απόσταση κατά Nei [-@Nei1978], καθώς και η γεωμετρική απόσταση Cavalli-Sforza [@cavalli1967phylogenetic] με το πακέτο hierfstat της R [@goudet_hierfstat_2005]. Οι πολυμεταβλητές αναλύσεις PCA, CA και η ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet [@Jombart2008]. Το λογισμικό Structure [@pritchard_inference_2000], αλλά και η πολυμεταβλητή ανάλυση DAPC (σε περιβάλλον R) θα χρησιμοποιηθoύν για την περαιτέρω διερεύνηση της διαφοροποίησης των δύο πληθυσμών. H DAPC ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν οι παραδοχές που απαιτεί το Structure δεν ικανοποιούνται (π.χ. ανισορροπία Hardy-Weinberg).
 
 <!-- η dapc δεν προϋποθέτει ισορροπία Hardy-Weinberg ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν-->
 
-### Γονιδιακή ροή
+#### _Γονιδιακή ροή_
 Ο αριθμός των μεταναστών θα εκτιμηθεί αρχικά σύμφωνα με το κλασσικό μοντέλο $Nm = [(1 / F~ST~) - 1] / 4$ [@frankham_introduction_2002]. Ωστόσο, αποτελεί παραδοχή της μεθόδου ότι η μετανάστευη είναι τάξεις μεγεθους μεγαλύτερη σε σχέση με τις μεταλλάξεις. Λόγω του υψηλού ρυθμού μεταλλάξεων που χαρακτηρίζει τους μικροδορυφόρους (περίπου $5 * 10^{-4}$)  [@whittaker_likelihood-based_2003] αυτή η παραδοχή ενδέχεται να παραβιάζεται [@whitlock_gst_2011]. Για το λόγο αυτό, ο αριθμός των μεταναστών θα υπολογιστεί και με τη χρήση των εξειδικευμένων λογισμίκών (coalescent-based models) Migrate [@beerli_maximum_2001] και MIGRAINE [@de_iorio_stepwise_2005].
 
 
@@ -104,7 +97,7 @@ always_allow_html: yes
 H καταγραφή της γενετικής ποικιλότητας των πληθυσμών αναμένεται να συνδράμει στο έργο της διαφύλαξης και διαχείρισης των γενετικών πόρων της καστανιάς στη χώρα μας.
 <!-- και την ορθολογική διαχείριση του πολλαπλασιαστικού υλικού --> 
 
-Επιπροσθέτως, η μελέτη της γονιδιακής ροής θα αποσαφηνίσει την έκταση ενός ενδεχομένου φαινομένου γενετικής ρύπανσης του φυσικού πληθυσμού από τον καστανεώνα. Η γνώση αυτή έχει άμεση πρακτική αξία όσον αφορά τις ενέργειες που πρέπει να ληφθούν για την διατήρηση της γενετικής ταυτότητας των φυσικών πληθυσμών της περιοχής.
+Επιπροσθέτως, η μελέτη της γονιδιακής ροής θα αποσαφηνίσει την έκταση ενός ενδεχομένου φαινομένου γενετικής ρύπανσης που υφίσταται ο φυσικός πληθυσμός από τον καστανεώνα. Η γνώση αυτή έχει άμεση πρακτική αξία όσον αφορά τις ενέργειες που πρέπει να ληφθούν για την διατήρηση της γενετικής ταυτότητας των φυσικών πληθυσμών της περιοχής.
 
 Ο γενετικός χαρακτηρισμός της ποικιλίας Αγιάσου Λέσβου 
 θα επιτρέψει την ανάπτυξη ελέγχων ταυτοποίησης και ιχνηλασιμότητας για το συγκεκριμένο φυτογενετικό υλικό.
