--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -8,13 +8,13 @@ papersize: a4
 date: "Οκτώβριος 2018"
 documentclass: report
 output: 
+  bookdown::word_document2:
+    toc: yes
   bookdown::pdf_document2:
     keep_tex: yes
     latex_engine: xelatex
     toc: no
     number_sections: no
-  bookdown::word_document2:
-    toc: yes
 header-includes: 
   \usepackage[greek]{babel}
   # \usepackage{extsizes}
@@ -37,13 +37,16 @@ always_allow_html: yes
 ## Εισαγωγή
 
 Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου. Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης [@fernandez-lopez_castanea_2003]. 
+Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα, έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απωλέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθιδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003]. 
+
+Αυτή η τάση παρατηρείται σε διάφορες διαβαθμίσεις και στους καστανεώνες της χώρας μας οι οποίοι μπορούν να διακριθούν σε δύο κατηγορίες: εντατικώς καλλιεργούμενοι (εμπορικώς εκμεταλλευόμενα εμβόλια σε επιλεγμένα υποκείμενα εντός αγροτικών γαιών) και εκτατικώς καλλιεργούμενοι (εμβόλια από επιλεγμένο υλικό τοπικής προέλευσης σε υποκείμενα άγριο τύπου εντός των δασών).
+Όσον αφορά τους πρώτους έχει βρεθεί ότι τυπικά φέρουν υψηλό αριθμό διαφορετικών γενοτύπων (~80% του συνολικού αριθμού δέντρων), ενώ οι δεύτεροι έχουν σαφώς χαμηλότερα ποσοστά [@aravanopoulos_multilocus_2005; @martin_identification_2009]. Υψηλοί αριθμοί διαφορετικών κλώνων θέτουν προβλήματα ομοιομορφίας της παραγωγής, αλλά αναμένεται να έχουν καλύτερη απόκριση στις διαφαινόμενες συνθήκες της κλιματικής αλλαγής. [@aravanopoulos_genetic_2010]
+Ένα πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγωγής ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδίων. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μειώνοντας έτσι την προσαρμοστικότητά τους [@Lefevre2004; @olden_ecological_2004]. 
 
 <!-- θετικά μονο/ολιγο κλωνικών καστανεώνων -->
 <!-- είδη καστανεώνων - εντατικώς καλλιεργούμενοι, εκτατικώς καλλιεργούμενοι -->
 
-Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα, έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απωλέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αυτή η τάση παρατηρείται και στους καστανεώνες της χώρας μας οι οποίοι συνήθως ιδρύονται με εμβόλια επιλεγμένων κλώνων. Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθιδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003].
-Ένα άλλο πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγωγής ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδίων. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μειώνοντας έτσι την προσαρμοστικότητά τους [@Lefevre2004; @olden_ecological_2004]. Η ικανότητα των δασών καστανιάς να αναπαράγονται βλαστικά έχει επιτρέψει στον άνθρωπο να διαχειρίζεται αυτά τα οικοσυστήματα με μικρούς περίτροπους χρόνους.
-Ωστόσο στα πρεμνοφυή δάση παρεμποδίζεται η φυσική αναγέννηση άρα και η δράση της φυσικής επιλογής σε αυτό το εξελικτικό στάδιο. Επιπλέον τα πρεμνοφυή δάση αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με αντίστοιχα φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008]. 
+Η ικανότητα των δασών καστανιάς να αναπαράγονται βλαστικά έχει επιτρέψει στον άνθρωπο να διαχειρίζεται αυτά τα οικοσυστήματα με μικρούς περίτροπους χρόνους. Ωστόσο στα πρεμνοφυή δάση παρεμποδίζεται η φυσική αναγέννηση άρα και η δράση της φυσικής επιλογής σε αυτό το εξελικτικό στάδιο. Επιπλέον τα πρεμνοφυή δάση αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με αντίστοιχα φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008]. 
 Τα παραπάνω στοιχεία συνηγορούν στο γεγονός ότι τα δάση αυτά έχουν εν δυνάμει μικρότερο δυναμικό προσαρμογής ή/και παρουσιάζουν χρονική υστέρηση στην προσαρμογή σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [@aravanopoulos_does_2003]. 
 
 Μελέτες που έχουν πραγματοποιηθεί με αλληλοένζυμα [@Villani1991; @villani1991genetic; @villani1994evolution] έδειξαν χαμηλότερες τιμές ποικιλότητας σε ευρωπαϊκούς πληθυσμούς σε Ιταλία και Γαλλία σε σχέση με πληθυσμούς προερχόμενους από την Τουρκία. Οι ελληνικοί πληθυσμοί του είδους έχουν διερευνηθεί σε μελέτες [@aravanopoulos_genetic_2010; @aravanopoulos_molecular_2005; @aravanopoulos_multilocus_2005; @Aravanopoulos2001] κυρίως με τη χρήση αλληλοενζύμων. Τα τελευταία χρόνια εμφανίζεται πληθώρα εργασιών στη διεθνή βιβλιογραφία με αναλύσεις σύγχρονων μοριακών δεικτών όπως οι μικροδορυφόροι (SSR)  [@buck_isolation_2003; @marinoni_development_2003; @martin_genetic_2010; @Mattioni2008; @Mattioni2013]. 
@@ -87,10 +90,8 @@ always_allow_html: yes
 
 Θα υπολογιστεί ο συντελεστής διαφοροποίησης F~ST~ [@nei1987molecular], η γενετική απόσταση κατά Nei [-@Nei1978], καθώς και η γεωμετρική απόσταση Cavalli-Sforza [@cavalli1967phylogenetic] με το πακέτο hierfstat της R [@goudet_hierfstat_2005]. Οι πολυμεταβλητές αναλύσεις PCA, CA και η ανάλυση μοριακής διακύμανσης AMOVA θα διεξαχθούν με το πακέτο adegenet [@Jombart2008]. Το λογισμικό Structure [@pritchard_inference_2000], αλλά και η πολυμεταβλητή ανάλυση DAPC [@Jombart2010] (σε περιβάλλον R) θα χρησιμοποιηθoύν για την περαιτέρω διερεύνηση της διαφοροποίησης των δύο πληθυσμών. H DAPC ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν οι παραδοχές που απαιτεί το Structure δεν ικανοποιούνται (π.χ. ανισορροπία Hardy-Weinberg).
 
-<!-- η dapc δεν προϋποθέτει ισορροπία Hardy-Weinberg ενδέχεται να αποδειχθεί ιδιαίτερα χρήσιμη εάν-->
-
 #### _Γονιδιακή ροή_
-Ο αριθμός των μεταναστών θα εκτιμηθεί αρχικά σύμφωνα με το κλασσικό μοντέλο $Nm = [(1 / F~ST~) - 1] / 4$ [@frankham_introduction_2002]. Ωστόσο, αποτελεί παραδοχή της μεθόδου ότι η μετανάστευη είναι τάξεις μεγεθους μεγαλύτερη σε σχέση με τις μεταλλάξεις. Λόγω του υψηλού ρυθμού μεταλλάξεων που χαρακτηρίζει τους μικροδορυφόρους (περίπου $5 * 10^{-4}$)  [@whittaker_likelihood-based_2003] αυτή η παραδοχή ενδέχεται να παραβιάζεται [@whitlock_gst_2011]. Για το λόγο αυτό, ο αριθμός των μεταναστών θα υπολογιστεί και με τη χρήση των εξειδικευμένων λογισμίκών (coalescent-based models) Migrate [@beerli_maximum_2001] και MIGRAINE [@de_iorio_stepwise_2005].
+Ο αριθμός των μεταναστών θα εκτιμηθεί αρχικά σύμφωνα με το κλασσικό μοντέλο $Nm = [(1 / F~ST~) - 1] / 4$ [@frankham_introduction_2002]. Ωστόσο, αποτελεί παραδοχή της μεθόδου ότι η μετανάστευση είναι τάξεις μεγεθους μεγαλύτερη σε σχέση με τις μεταλλάξεις. Λόγω του υψηλού ρυθμού μεταλλάξεων που χαρακτηρίζει τους μικροδορυφόρους (περίπου $5 * 10^{-4}$)  [@whittaker_likelihood-based_2003] αυτή η παραδοχή ενδέχεται να παραβιάζεται [@whitlock_gst_2011]. Για το λόγο αυτό, ο αριθμός των μεταναστών θα υπολογιστεί και με τη χρήση των εξειδικευμένων λογισμικών (coalescent-based models) Migrate [@beerli_maximum_2001] και MIGRAINE [@de_iorio_stepwise_2005].
 
 
 ## Αναμενόμενα αποτελέσματα
