2nd drafted proofed by NT

--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -8,13 +8,13 @@ papersize: a4
 date: "Οκτώβριος 2018"
 documentclass: report
 output: 
-  bookdown::word_document2:
-    toc: yes
   bookdown::pdf_document2:
     keep_tex: yes
     latex_engine: xelatex
     toc: no
     number_sections: no
+  bookdown::word_document2:
+    toc: yes
 header-includes: 
   \usepackage[greek]{babel}
   # \usepackage{extsizes}
@@ -39,8 +39,8 @@ always_allow_html: yes
 Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου. Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης [@fernandez-lopez_castanea_2003]. 
 Η εκτεταμένη καλλιέργεια και μεταφορά φυτογενετικού υλικού καστανιάς από τον άνθρωπο ήδη από την αρχαιότητα, έχει αφήσει το στίγμα της στην εξελικτική πορεία του είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απωλέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής άριστων κλώνων. Αποτέλεσμα αυτής της διαδικασίας είναι οι εγκαθιδρυμένες φυτείες να έχουν μικρά περιθώρια προσαρμογής σε περιβαλλοντικές διαταραχές, αλλά και βελτίωσης ως προς νέα γνωρίσματα [@Reed2003]. 
 
-Αυτή η τάση παρατηρείται σε διάφορες διαβαθμίσεις και στους καστανεώνες της χώρας μας οι οποίοι μπορούν να διακριθούν σε δύο κατηγορίες: εντατικώς καλλιεργούμενοι (εμπορικώς εκμεταλλευόμενα εμβόλια σε επιλεγμένα υποκείμενα εντός αγροτικών γαιών) και εκτατικώς καλλιεργούμενοι (εμβόλια από επιλεγμένο υλικό τοπικής προέλευσης σε υποκείμενα άγριο τύπου εντός των δασών).
-Όσον αφορά τους πρώτους έχει βρεθεί ότι τυπικά φέρουν υψηλό αριθμό διαφορετικών γενοτύπων (~80% του συνολικού αριθμού δέντρων), ενώ οι δεύτεροι έχουν σαφώς χαμηλότερα ποσοστά [@aravanopoulos_multilocus_2005; @martin_identification_2009]. Υψηλοί αριθμοί διαφορετικών κλώνων θέτουν προβλήματα ομοιομορφίας της παραγωγής, αλλά αναμένεται να έχουν καλύτερη απόκριση στις διαφαινόμενες συνθήκες της κλιματικής αλλαγής. [@aravanopoulos_genetic_2010]
+Αυτή η τάση παρατηρείται σε διάφορες διαβαθμίσεις και στους καστανεώνες της χώρας μας οι οποίοι μπορούν να διακριθούν σε δύο κατηγορίες: εντατικώς καλλιεργούμενοι (εμπορικώς εκμεταλλευόμενα εμβόλια σε επιλεγμένα υποκείμενα εντός αγροτικών γαιών) και εκτατικώς καλλιεργούμενοι (εμβόλια από επιλεγμένο υλικό τοπικής προέλευσης σε υποκείμενα άγριου τύπου εντός των δασών).
+Όσον αφορά τους πρώτους έχει βρεθεί ότι τυπικά φέρουν υψηλό αριθμό διαφορετικών γενοτύπων (~80% του συνολικού αριθμού δέντρων), ενώ οι δεύτεροι έχουν σαφώς χαμηλότερα ποσοστά [@aravanopoulos_multilocus_2005; @martin_identification_2009]. Υψηλοί αριθμοί διαφορετικών κλώνων θέτουν προβλήματα ομοιομορφίας της παραγωγής, αλλά αναμένεται να έχουν καλύτερη απόκριση στις διαφαινόμενες συνθήκες της κλιματικής αλλαγής [@aravanopoulos_genetic_2010].
 Ένα πρόβλημα που είναι δυνατόν να προκύψει από την καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγωγής ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδίων. Το υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων μειώνοντας έτσι την προσαρμοστικότητά τους [@Lefevre2004; @olden_ecological_2004]. 
 
 <!-- θετικά μονο/ολιγο κλωνικών καστανεώνων -->
@@ -54,7 +54,7 @@ always_allow_html: yes
 <!-- refugia - founder effects [@Petit2005] Long term --> 
 <!-- Η κατακερματισμένη εξάπλωση του είδους στη Μεσόγειο καθιστά απαραίτητη την μελέτη και προστασία των γενετικών αποθεμάτων απομονωμένων πληθυσμών, ώστε να μετριαστεί η αρνητική επίδραση της γενετικης εκτροπής -->
 
-Σήμερα κρίνεται αναγκαία η μελέτη των ελληνικών πληθυσμών του είδους με σύγχρονες μοριακές τεχνικές. Υψηλή προτεραιότητα θα πρέπει να έχουν μεταξύ άλλων και γεωγραφικά απομονωμένοι πληθυσμοί καθώς ο κίνδυνος απώλειας πολύτιμου γενετικού υλικού από αυτούς, λόγω φαινομένων όπως η γενετική εκτροπή υψηλός. Προτείνεται η μελέτη δύο πληθυσμών καστανιάς στην περιοχή Αγιάσου της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός ανα-πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει εκτατικώς καλλιεργούμενο καστανεώνα ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
+Σήμερα κρίνεται αναγκαία η μελέτη των ελληνικών πληθυσμών του είδους με σύγχρονες μοριακές τεχνικές. Υψηλή προτεραιότητα θα πρέπει να έχουν μεταξύ άλλων και γεωγραφικά απομονωμένοι πληθυσμοί καθώς ο κίνδυνος απώλειας πολύτιμου γενετικού υλικού από αυτούς, λόγω φαινομένων όπως η γενετική εκτροπή είναι υψηλός. Προτείνεται η μελέτη δύο πληθυσμών καστανιάς στην περιοχή Αγιάσου της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός ανα-πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει εκτατικώς καλλιεργούμενο καστανεώνα ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
 
 ## Σκοπός
 
