--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -117,14 +117,14 @@
 εντατικώς καλλιεργούμενοι (εμπορικώς εκμεταλλευόμενα εμβόλια σε
 επιλεγμένα υποκείμενα εντός αγροτικών γαιών) και εκτατικώς
 καλλιεργούμενοι (εμβόλια από επιλεγμένο υλικό τοπικής προέλευσης σε
-υποκείμενα άγριο τύπου εντός των δασών). Όσον αφορά τους πρώτους έχει
+υποκείμενα άγριου τύπου εντός των δασών). Όσον αφορά τους πρώτους έχει
 βρεθεί ότι τυπικά φέρουν υψηλό αριθμό διαφορετικών γενοτύπων
 (\textasciitilde{}80\% του συνολικού αριθμού δέντρων), ενώ οι δεύτεροι
 έχουν σαφώς χαμηλότερα ποσοστά (Aravanopoulos and Drouzas, 2005; Martin
 et al., 2009). Υψηλοί αριθμοί διαφορετικών κλώνων θέτουν προβλήματα
 ομοιομορφίας της παραγωγής, αλλά αναμένεται να έχουν καλύτερη απόκριση
-στις διαφαινόμενες συνθήκες της κλιματικής αλλαγής. (Aravanopoulos et
-al., 2010) Ένα πρόβλημα που είναι δυνατόν να προκύψει από την
+στις διαφαινόμενες συνθήκες της κλιματικής αλλαγής (Aravanopoulos et
+al., 2010). Ένα πρόβλημα που είναι δυνατόν να προκύψει από την
 καλλιέργεια καστανεώνων σε μια περιοχή είναι η πιθανότητα εισαγωγής
 ξένου γενετικού υλικού σε φυσικούς πληθυσμούς μέσω της ροής γονιδίων. Το
 υλικό αυτό δύναται να αυξήσει το γενετικό φορτίο των φυσικών συστάδων
@@ -159,10 +159,10 @@ al., 2008, 2013).
 σύγχρονες μοριακές τεχνικές. Υψηλή προτεραιότητα θα πρέπει να έχουν
 μεταξύ άλλων και γεωγραφικά απομονωμένοι πληθυσμοί καθώς ο κίνδυνος
 απώλειας πολύτιμου γενετικού υλικού από αυτούς, λόγω φαινομένων όπως η
-γενετική εκτροπή υψηλός. Προτείνεται η μελέτη δύο πληθυσμών καστανιάς
-στην περιοχή Αγιάσου της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε
-φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός
-ανα-πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει εκτατικώς
+γενετική εκτροπή είναι υψηλός. Προτείνεται η μελέτη δύο πληθυσμών
+καστανιάς στην περιοχή Αγιάσου της νήσου Λέσβου. Ο ένας πληθυσμός
+εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς
+(βλαστικός ανα-πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει εκτατικώς
 καλλιεργούμενο καστανεώνα ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε
 άγριου-τύπου υποκείμενα.
 
