updated bibliography, still issues with species names though

--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -311,21 +311,21 @@ Forest, Snow and Landscape Research 76, 429--434.
 Aravanopoulos, F., Bucci, G., Akkak, A., Blanco Silva, R., Botta, R.,
 Buck, E., Cherubini, M., Drouzas, A., Fernández-López, J., Mattioni, C.,
 Marinoni, D., Papadima, A., Russell, K., Zas, R., Villani, F., 2005.
-MOLECULAR POPULATION GENETICS AND DYNAMICS OF CHESTNUT (\emph{Castanea}
-\emph{Sativa}) IN EUROPE: INFERENCES FOR GENE CONSERVATION AND TREE
-IMPROVEMENT. Acta Horticulturae 403--412.
+Molecular population genetics and dynamics of chestnut (\emph{Castanea}
+\emph{Sativa}) in Europe: Inferences for gene conservation and tree
+improvement. Acta Horticulturae 403--412.
 \url{https://doi.org/10.17660/ActaHortic.2005.693.50}
 
 \leavevmode\hypertarget{ref-aravanopoulos_multilocus_2005}{}%
-Aravanopoulos, F., Drouzas, A., 2005. MULTILOCUS GENETIC STRUCTURE OF
-EUROPEAN CHESTNUT (\emph{Castanea} \emph{Sativa}) HELLENIC CLONES AND
-GENETIC DIVERSITY OF ORCHARD POPULATIONS. Acta Horticulturae 447--452.
+Aravanopoulos, F., Drouzas, A., 2005. Multilocus genetic structure of
+European chestnut (\emph{Castanea} \emph{Sativa}) Hellenic clones and
+genetic diversity of orchard population. Acta Horticulturae 447--452.
 \url{https://doi.org/10.17660/ActaHortic.2005.693.56}
 
 \leavevmode\hypertarget{ref-aravanopoulos_genetic_2010}{}%
 Aravanopoulos, F., Mitsakaki, A., Katsidi, E., Avramidou, E.,
-Sfakianaki, E., 2010. GENETIC DIVERSITY OF INTENSIVELY AND EXTENSIVELY
-MANAGED CHESTNUT (\emph{Castanea} \emph{Sativa}) ORCHARDS IN GREECE.
+Sfakianaki, E., 2010. Genetic diversity of intensively and extensively
+managed chestnut (\emph{Castanea} \emph{Sativa}) orchards in Greece.
 Acta Horticulturae 121--126.
 \url{https://doi.org/10.17660/ActaHortic.2010.866.12}
 
